Стилизует радио-кнопки

--- a/source/index.html
+++ b/source/index.html
@@ -84,23 +84,23 @@
         <h3 class="features__title">Главные причины выбрать Drink2Go</h3>
         <ul class="features__list">
           <li class="features__item">
-            <span class="features__image"></span>
+            <span class="features__image features__image--speed"></span>
             <h4 class="features__description-title">Скорость</h4>
             <p class="features__description">Готовый напиток всегда под рукой — просто открой банку</p>
           </li>
           <li class="features__item">
-            <span class="features__image"></span>
+            <span class="features__image features__image--comfort"></span>
             <h4 class="features__description-title">Удобство</h4>
             <p class="features__description">Легко помещается и в карман,
               и в маленькую сумочку</p>
           </li>
           <li class="features__item">
-            <span class="features__image"></span>
+            <span class="features__image features__image--energy"></span>
             <h4 class="features__description-title">Бодрость</h4>
             <p class="features__description">Сбалансированная доза кофеина даст мощный заряд энергии</p>
           </li>
           <li class="features__item">
-            <span class="features__image"></span>
+            <span class="features__image features__image--eco"></span>
             <h4 class="features__description-title">Экологичность</h4>
             <p class="features__description">Вся упаковка сделана
               из перерабатываемых материалов</p>
@@ -141,27 +141,31 @@
             <legend class="form__title">Наличие молока</legend>
             <ul class="form__list">
               <li class="form__item">
-                <label class="form__value" for="nomatter">Не важно
+                <label class="form__value" for="nomatter">
                   <input class="form__input form__input--radio" name="milk" type="radio" value="nomatter" id="nomatter" checked>
-                  <span class="form__control-mark"></span>
+                  <span class="form__control-radio"></span>
+                  Не важно
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__value" for="animal">Только животное
+                <label class="form__value" for="animal">
                   <input class="form__input form__input--radio" name="milk" type="radio" value="animal" id="animal">
                   <span class="form__control-radio"></span>
+                  Только животное
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__value" for="vegan">Только растительное
+                <label class="form__value" for="vegan">
                   <input class="form__input form__input--radio" name="milk" type="radio" value="vegan" id="vegan">
                   <span class="form__control-radio"></span>
+                  Только растительное
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__value" for="nomilk">Без молока
+                <label class="form__value" for="nomilk">
                   <input class="form__input form__input--radio" name="milk" type="radio" value="nomilk" id="nomilk">
                   <span class="form__control-radio"></span>
+                  Без молока
                 </label>
               </li>
             </ul>
@@ -171,32 +175,37 @@
             <ul class="form__list">
               <li class="form__item">
                 <label class="form__value" for="brasil">
-                  <span>Бразилия</span>
+
                   <input class="form__input form__input--checkbox" type="checkbox" name="brasil" id="brasil" checked>
+                  <span>Бразилия</span>
                 </label>
               </li>
               <li class="form__item">
                 <label class="form__value" for="ethiopia">
-                  <span>Эфиопия</span>
+
                   <input class="form__input form__input--checkbox" type="checkbox" name="ethiopia" id="ethiopia">
+                  <span>Эфиопия</span>
                 </label>
               </li>
               <li class="form__item">
                 <label class="form__value" for="colombia">
-                  <span>Колумбия</span>
+
                   <input class="form__input form__input--checkbox" type="checkbox" name="colombia" id="colombia">
+                  <span>Колумбия</span>
                 </label>
               </li>
               <li class="form__item">
                 <label class="form__value" for="costarica">
-                  <span>Коста-Рика</span>
+
                   <input class="form__input form__input--checkbox" type="checkbox" name="costarica" id="costarica">
+                  <span>Коста-Рика</span>
                 </label>
               </li>
               <li class="form__item">
                 <label class="form__value" for="peru">
-                  <span>Перу</span>
+
                   <input class="form__input form__input--checkbox" type="checkbox" name="peru" id="peru">
+                  <span>Перу</span>
                 </label>
               </li>
             </ul>
