Делает кастомные чекбоксы-свичи

--- a/source/index.html
+++ b/source/index.html
@@ -174,37 +174,42 @@
             <legend class="form__title">Страна происхождения</legend>
             <ul class="form__list">
               <li class="form__item">
-                <label class="form__value" for="brasil">
+                <label class="form__value  form__value--checkbox" for="brasil">
 
-                  <input class="form__input form__input--checkbox" type="checkbox" name="brasil" id="brasil" checked>
+                  <input class="form__input" type="checkbox" name="brasil" id="brasil" checked>
+                  <span class="form__control-switch"></span>
                   <span>Бразилия</span>
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__value" for="ethiopia">
+                <label class="form__value  form__value--checkbox" for="ethiopia">
 
-                  <input class="form__input form__input--checkbox" type="checkbox" name="ethiopia" id="ethiopia">
+                  <input class="form__input" type="checkbox" name="ethiopia" id="ethiopia">
+                  <span class="form__control-switch"></span>
                   <span>Эфиопия</span>
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__value" for="colombia">
+                <label class="form__value  form__value--checkbox" for="colombia">
 
-                  <input class="form__input form__input--checkbox" type="checkbox" name="colombia" id="colombia">
+                  <input class="form__input" type="checkbox" name="colombia" id="colombia">
+                  <span class="form__control-switch"></span>
                   <span>Колумбия</span>
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__value" for="costarica">
+                <label class="form__value form__value--checkbox" for="costarica">
 
-                  <input class="form__input form__input--checkbox" type="checkbox" name="costarica" id="costarica">
+                  <input class="form__input" type="checkbox" name="costarica" id="costarica">
+                  <span class="form__control-switch"></span>
                   <span>Коста-Рика</span>
                 </label>
               </li>
               <li class="form__item">
-                <label class="form__value" for="peru">
+                <label class="form__value form__value--checkbox" for="peru">
 
-                  <input class="form__input form__input--checkbox" type="checkbox" name="peru" id="peru">
+                  <input class="form__input" type="checkbox" name="peru" id="peru" disabled>
+                  <span class="form__control-switch"></span>
                   <span>Перу</span>
                 </label>
               </li>
