Добавляет состояния кнопкам слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -76,8 +76,8 @@
           <a class="hero-slider__link button" href="form.html">Заказать</a>
         </div>
       </div>
-        <button class="hero-slider__button slider-button-prev" aria-label="Посмотреть предыдущий слайд" type="button">&lt;</button>
-        <button class="hero-slider__button slider-button-next" aria-label="Посмотреть следующий слайд" type="button">&gt</button>
+        <button class="hero-slider__button hero-slider__button--prev slider-button-prev" aria-label="Посмотреть предыдущий слайд" type="button"></button>
+        <button class="hero-slider__button hero-slider__button--next slider-button-next" aria-label="Посмотреть следующий слайд" type="button"></button>
       </section>
       <section class="features section">
         <span class="features__bage bage">Преимущества</span>
