Добавляет папку vendor

--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
                   <input class="range__input range__input--from" type="number" value="0" name="min-price">
                 </label>
                 <span class="range__dash">-</span>
-                <label class="renge__name">
+                <label class="range__name">
                   <input class="range__input range__input--to" type="number" value="900" name="max-price">
                 </label>
               </div>
