--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
     <title>Drink2Go</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
 </head>
 
   <body class="page__body">
@@ -432,7 +433,7 @@
       </section>
     </div>
     </footer>
-
+    <script src="vendor/nouislider/nouislider.js"></script>
     <script src="js/script.js" defer></script>
   </body>
 
