Добавляет стрелочку селекту

--- a/source/index.html
+++ b/source/index.html
@@ -214,12 +214,15 @@
         </form>
         <div class="catalog__select-wrapper select">
         <span class="select__name">Сортировка:</span>
+        <div class="select__wrapper">
         <select class="select__list" aria-label="Сортировка">
           <option value="default">По умолчанию</option>
           <option value="cheap">Сначала дешевые</option>
           <option value="expensive">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
+        <span class="select__icon"></span>
+      </div>
       </div>
         <div class="catalog__list-wrapper">
           <ul class="catalog__list">
