--- a/source/index.html
+++ b/source/index.html
@@ -13,9 +13,9 @@
       <div class="header__wrapper">
       <a class="header__logo logo" href="">
         <picture>
-          <!-- <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52"> -->
-        <img class="header__logo-image" src="images/logo-image-mobile.svg" width="32" height="36"
+          <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="170" height="36">
+          <source media="(min-width: 768px)" srcset="images/logo-tablet.svg" width="82" height="36">
+          <img class="header__logo-image" src="images/logo-image-mobile.svg" width="32" height="36"
           alt="Drink2Go.">
       </picture>
       </a>
@@ -55,7 +55,8 @@
 
     <main class="main-container">
       <h1 class="visually-hidden">Отличный кофе без кофеина уже сварен.</h1>
-      <section class="hero-slider section ">
+      <section class="hero-slider">
+        <div class="hero-slider__wrap">
         <div class="slider-pagination">
           <picture>
             <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="img/promo-desktop.webp 1x, img/promo-desktop-2x.webp 2x" width="552" height="499">
@@ -63,10 +64,11 @@
             <source type="image/webp" srcset="img/promo-mobile.webp 1x, img/promo-mobile-2x.webp 2x" width="280" height="270">
             <source media="(min-width: 1440px)" srcset="img/promo-desktop.png 1x, img/promo-desktop-2x.png 2x" width="552" height="499">
             <source media="(min-width: 768px)" srcset="img/promo-tablet.png 1x, img/promo-tablet-2x.png 2x" width="709" height="609"> -->
-          <img class="hero-slider__image" src="images/slider-1-mobile.png" width="280" height="270" srcset="images/slider-1-2x-mobile.png 2x" alt="Кофе номер 1.">
-          <img class="hero-slider__image" src="images/slider-2-mobile.png" width="280" height="270" srcset="images/slider-2-2x-mobile.png 2x" alt="Кофе номер 2.">
-          <img class="hero-slider__image" src="images/slider-3-mobile.png" width="280" height="270" srcset="images/slider-3-2x-mobile.png 2x" alt="Кофе номер 3.">
+          <img class="hero-slider__image" src="images/slider-1-mobile.png" width="280" height="280" srcset="images/slider-1-2x-mobile.png 2x" alt="Кофе номер 1.">
+          <img class="hero-slider__image" src="images/slider-2-mobile.png" width="280" height="280" srcset="images/slider-2-2x-mobile.png 2x" alt="Кофе номер 2.">
+          <img class="hero-slider__image" src="images/slider-3-mobile.png" width="280" height="280" srcset="images/slider-3-2x-mobile.png 2x" alt="Кофе номер 3.">
           </picture>
+          <div class="hero-slider__wrapper">
           <span class="hero-slider__bage bage">Новинка!</span>
         <h2 class="hero-slider__title">Декаф Флэт Уайт</h2>
         <p class="hero-slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
@@ -77,8 +79,10 @@
           <a class="hero-slider__link button" href="form.html">Заказать</a>
         </div>
       </div>
+      </div>
         <button class="hero-slider__button hero-slider__button--prev slider-button-prev" aria-label="Посмотреть предыдущий слайд" type="button"></button>
         <button class="hero-slider__button hero-slider__button--next slider-button-next" aria-label="Посмотреть следующий слайд" type="button"></button>
+        </div>
       </section>
       <section class="features section">
         <span class="features__bage bage">Преимущества</span>
