--- a/source/index.html
+++ b/source/index.html
@@ -62,11 +62,11 @@
             <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="img/promo-desktop.webp 1x, img/promo-desktop-2x.webp 2x" width="552" height="499">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/promo-tablet.webp 1x, img/promo-tablet-2x.webp 2x" width="709" height="609">
             <source type="image/webp" srcset="img/promo-mobile.webp 1x, img/promo-mobile-2x.webp 2x" width="280" height="270">
-            <source media="(min-width: 1440px)" srcset="img/promo-desktop.png 1x, img/promo-desktop-2x.png 2x" width="552" height="499">
-            <source media="(min-width: 768px)" srcset="img/promo-tablet.png 1x, img/promo-tablet-2x.png 2x" width="709" height="609"> -->
-          <img class="hero-slider__image" src="images/slider-1-mobile.png" width="280" height="280" srcset="images/slider-1-2x-mobile.png 2x" alt="Кофе номер 1.">
-          <img class="hero-slider__image" src="images/slider-2-mobile.png" width="280" height="280" srcset="images/slider-2-2x-mobile.png 2x" alt="Кофе номер 2.">
-          <img class="hero-slider__image" src="images/slider-3-mobile.png" width="280" height="280" srcset="images/slider-3-2x-mobile.png 2x" alt="Кофе номер 3.">
+            <source media="(min-width: 1440px)" srcset="images/slider/slider-1-desktop.png 1x, images/slider/slider-1-desktop.png 2x" width="552" height="499">
+            <source media="(min-width: 768px)" srcset="images/slider/slider-1-tablet.png 1x, images/slider/slider-1-tablet.png.png 2x" width="709" height="609"> -->
+          <img class="hero-slider__image" src="images/slider/slider-1-mobile.png" width="280" height="280" srcset="images/slider/slider-1-mobile-2x.png 2x" alt="Кофе номер 1.">
+          <img class="hero-slider__image" src="images/slider/slider-2-mobile.png" width="280" height="280" srcset="images/slider/slider-2-mobile-2x.png 2x" alt="Кофе номер 2.">
+          <img class="hero-slider__image" src="images/slider/slider-3-mobile.png" width="280" height="280" srcset="images/slider/slider-3-mobile-2x.png 2x" alt="Кофе номер 3.">
           </picture>
           <div class="hero-slider__wrapper">
           <span class="hero-slider__bage bage">Новинка!</span>
