Сетка преимуществ для планшетов

--- a/source/index.html
+++ b/source/index.html
@@ -59,11 +59,24 @@
         <div class="hero-slider__wrap">
         <div class="slider-pagination">
           <picture>
-            <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="img/promo-desktop.webp 1x, img/promo-desktop-2x.webp 2x" width="552" height="499">
-            <source type="image/webp" media="(min-width: 768px)" srcset="img/promo-tablet.webp 1x, img/promo-tablet-2x.webp 2x" width="709" height="609">
-            <source type="image/webp" srcset="img/promo-mobile.webp 1x, img/promo-mobile-2x.webp 2x" width="280" height="270">
-            <source media="(min-width: 1440px)" srcset="images/slider/slider-1-desktop.png 1x, images/slider/slider-1-desktop.png 2x" width="552" height="499">
-            <source media="(min-width: 768px)" srcset="images/slider/slider-1-tablet.png 1x, images/slider/slider-1-tablet.png.png 2x" width="709" height="609"> -->
+            <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slider-1-desktop.webp 1x, images/slider/slider-1-desktop-2x.webp 2x" width="600" height="600">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slider-1-tablet.webp 1x, images/slider/slider-1-tablet-2x.webp 2x" width="476" height="476">
+            <source type="image/webp" srcset="images/slider/slider-1-mobile.webp 1x, images/slider/slider-1-mobile-2x.webp 2x" width="280" height="280">
+            <source media="(min-width: 1440px)" srcset="images/slider/slider-1-desktop.png 1x, images/slider/slider-1-desktop-2x.png 2x" width="600" height="600">
+            <source media="(min-width: 768px)" srcset="images/slider/slider-1-tablet.png 1x, images/slider/slider-1-tablet-2x.png 2x" width="476" height="476">
+
+            <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slider-2-desktop.webp 1x, images/slider/slider-2-desktop-2x.webp 2x" width="600" height="600">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slider-2-tablet.webp 1x, images/slider/slider-2-tablet-2x.webp 2x" width="476" height="476">
+            <source type="image/webp" srcset="images/slider/slider-2-mobile.webp 1x, images/slider/slider-2-mobile-2x.webp 2x" width="280" height="280">
+            <source media="(min-width: 1440px)" srcset="images/slider/slider-2-desktop.png 1x, images/slider/slider-2-desktop-2x.png 2x" width="600" height="600">
+            <source media="(min-width: 768px)" srcset="images/slider/slider-2-tablet.png 1x, images/slider/slider-2-tablet-2x.png 2x" width="476" height="476">
+
+            <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slider-3-desktop.webp 1x, images/slider/slider-3-desktop-2x.webp 2x" width="600" height="600">
+            <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slider-3-tablet.webp 1x, images/slider/slider-3-tablet-2x.webp 2x" width="476" height="476">
+            <source type="image/webp" srcset="images/slider/slider-3-mobile.webp 1x, images/slider/slider-3-mobile-2x.webp 2x" width="280" height="280">
+            <source media="(min-width: 1440px)" srcset="images/slider/slider-3-desktop.png 1x, images/slider/slider-3-desktop-2x.png 2x" width="600" height="600">
+            <source media="(min-width: 768px)" srcset="images/slider/slider-3-tablet.png 1x, images/slider/slider-3-tablet-2x.png 2x" width="476" height="476">
+
           <img class="hero-slider__image" src="images/slider/slider-1-mobile.png" width="280" height="280" srcset="images/slider/slider-1-mobile-2x.png 2x" alt="Кофе номер 1.">
           <img class="hero-slider__image" src="images/slider/slider-2-mobile.png" width="280" height="280" srcset="images/slider/slider-2-mobile-2x.png 2x" alt="Кофе номер 2.">
           <img class="hero-slider__image" src="images/slider/slider-3-mobile.png" width="280" height="280" srcset="images/slider/slider-3-mobile-2x.png 2x" alt="Кофе номер 3.">
@@ -84,7 +97,8 @@
         <button class="hero-slider__button hero-slider__button--next slider-button-next" aria-label="Посмотреть следующий слайд" type="button"></button>
         </div>
       </section>
-      <section class="features section">
+      <section class="features">
+        <div class="features__wrapper wrapper">
         <span class="features__bage bage">Преимущества</span>
         <h3 class="features__title">Главные причины выбрать Drink2Go</h3>
         <ul class="features__list">
@@ -111,6 +125,7 @@
               из перерабатываемых материалов</p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="catalog">
         <div class="catalog__wrapper wrapper">
