--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Drink2Go</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="vendor/nouislider/nouislider.css"> -->
 </head>
@@ -132,13 +132,14 @@
         <span class="catalog__bage bage">Каталог</span>
         <h3 class="catalog__title">Каталог кофейных напитков</h3>
         <form class="catalog__form form" action="https://echo.htmlacademy.ru/" method="get">
+          <div class="form__wrapper">
           <fieldset class="form__group">
             <legend class="form__title">Цена</legend>
             <div class="form__range range">
               <div class="range__slider" id="slider"></div>
               <div class="range__wrapper">
                 <label class="range__name">
-                  <input class="range__input range__input--from" type="number" min="0" max="1000" value="0" name="min-price">
+                  <input class="range__input range__input--from" type="number" min="0" max="1000"  placeholder="0" name="min-price">
                 </label>
                 <span class="range__dash">-</span>
                 <label class="range__name">
@@ -226,6 +227,7 @@
               </li>
             </ul>
           </fieldset>
+          </div>
           <div class="form__button-wrapper">
             <button class="form__button button form__button--submit" type="submit">Применить</button>
             <button class="form__button button form__button--reset" type="reset">Сбросить</button>
@@ -247,7 +249,10 @@
           <ul class="catalog__list">
             <li class="catalog__item card">
               <a class="card__picture" href="">
-                <img class="card__image" src="images/catalog-img/catalog-1-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
+                <picture>
+                <source type="image/webp" srcset="images/catalog-img/catalog-1.webp 1x, images/catalog-img/catalog-1-2x.webp 2x" width="130" height="188">
+                <img class="card__image" src="images/catalog-img/catalog-1.png" srcset="images/catalog-img/catalog-1-2x.png 2x" width="130" height="188" alt="Банка с холодным кофе">
+              </picture>
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -259,7 +264,10 @@
             </li>
             <li class="catalog__item card">
               <a class="card__picture" href="">
-                <img class="card__image" src="images/catalog-img/catalog-2-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
+                <picture>
+                <source type="image/webp" srcset="images/catalog-img/catalog-2.webp 1x, images/catalog-img/catalog-2-2x.webp 2x" width="130" height="188">
+                <img class="card__image" src="images/catalog-img/catalog-2.png" srcset="images/catalog-img/catalog-2-2x.png 2x" width="130" height="188" alt="Банка с холодным кофе">
+              </picture>
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -271,7 +279,10 @@
             </li>
             <li class="catalog__item card">
               <a class="card__picture" href="">
-                <img class="card__image" src="images/catalog-img/catalog-3-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
+                <picture>
+                <source type="image/webp" srcset="images/catalog-img/catalog-3.webp 1x, images/catalog-img/catalog-3-2x.webp 2x" width="130" height="188">
+                <img class="card__image" src="images/catalog-img/catalog-3.png" srcset="images/catalog-img/catalog-3-2x.png 2x" width="130" height="188" alt="Банка с холодным кофе">
+              </picture>
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -283,7 +294,10 @@
             </li>
             <li class="catalog__item card">
               <a class="card__picture" href="">
-                <img class="card__image" src="images/catalog-img/catalog-4-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
+                <picture>
+                <source type="image/webp" srcset="images/catalog-img/catalog-4.webp 1x, images/catalog-img/catalog-4-2x.webp 2x" width="130" height="188">
+                <img class="card__image" src="images/catalog-img/catalog-4.png" srcset="images/catalog-img/catalog-4-2x.png 2x" width="130" height="188" alt="Банка с холодным кофе">
+              </picture>
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -296,7 +310,10 @@
             <li class="catalog__item card">
 
               <a class="card__picture" href="">
-                <img class="card__image" src="images/catalog-img/catalog-5-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
+                <picture>
+                <source type="image/webp" srcset="images/catalog-img/catalog-5.webp 1x, images/catalog-img/catalog-5-2x.webp 2x" width="130" height="188">
+                <img class="card__image" src="images/catalog-img/catalog-5.png" srcset="images/catalog-img/catalog-5-2x.png 2x" width="130" height="188" alt="Банка с холодным кофе">
+              </picture>
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -308,7 +325,10 @@
             </li>
             <li class="catalog__item card">
               <a class="card__picture" href="">
-                <img class="card__image" src="images/catalog-img/catalog-6-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
+                <picture>
+                <source type="image/webp" srcset="images/catalog-img/catalog-6.webp 1x, images/catalog-img/catalog-6-2x.webp 2x" width="130" height="188">
+                <img class="card__image" src="images/catalog-img/catalog-6.png" srcset="images/catalog-img/catalog-6-2x.png 2x" width="130" height="188" alt="Банка с холодным кофе">
+              </picture>
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
