Стилизует планшетную версию

--- a/source/index.html
+++ b/source/index.html
@@ -378,7 +378,10 @@
       <div class="footer__wrapper">
       <div class="footer__social social">
         <a class="social__logo logo">
-          <img class="logo__image" src="images/logo-footer-mobile.svg" alt="Кофе ту гоу.">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/logo-desktop.svg" width="170" height="36">
+            <img class="logo__image" src="images/logo-footer-mobile.svg" alt="Кофе ту гоу.">
+          </picture>
         </a>
         <ul class="social__list">
           <li class="social__item">
