--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,6 @@
     <title>Drink2Go</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="vendor/nouislider/nouislider.css"> -->
 </head>
 
   <body class="page__body">
@@ -37,12 +36,12 @@
           <ul class="main-nav__user-list">
             <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--user">
-                <span class="visually-hidden">Личный кабинет</span>
+                <span class="main-nav__span">Войти</span>
               </a>
             </li>
             <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--basket">
-            <span class="visually-hidden">Корзина</span>
+            <span class="main-nav__span">Корзина</span>
           </a>
           </li>
         </ul>
@@ -57,9 +56,9 @@
       <h1 class="visually-hidden">Отличный кофе без кофеина уже сварен.</h1>
       <section class="hero-slider">
         <div class="hero-slider__wrap">
-        <div class="slider-pagination">
+        <div class="hero-slider__info">
           <picture>
-            <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slider-1-desktop.webp 1x, images/slider/slider-1-desktop-2x.webp 2x" width="600" height="600">
+            <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="images/slider/slider-1-desktop.webp 1x, images/slider/slider-1-desktop-2x.webp 2x" width="600" height="600">
             <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slider-1-tablet.webp 1x, images/slider/slider-1-tablet-2x.webp 2x" width="476" height="476">
             <source type="image/webp" srcset="images/slider/slider-1-mobile.webp 1x, images/slider/slider-1-mobile-2x.webp 2x" width="280" height="280">
             <source media="(min-width: 1440px)" srcset="images/slider/slider-1-desktop.png 1x, images/slider/slider-1-desktop-2x.png 2x" width="600" height="600">
@@ -75,7 +74,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="images/slider/slider-3-tablet.webp 1x, images/slider/slider-3-tablet-2x.webp 2x" width="476" height="476">
             <source type="image/webp" srcset="images/slider/slider-3-mobile.webp 1x, images/slider/slider-3-mobile-2x.webp 2x" width="280" height="280">
             <source media="(min-width: 1440px)" srcset="images/slider/slider-3-desktop.png 1x, images/slider/slider-3-desktop-2x.png 2x" width="600" height="600">
-            <source media="(min-width: 768px)" srcset="images/slider/slider-3-tablet.png 1x, images/slider/slider-3-tablet-2x.png 2x" width="476" height="476">
+            <source media="(min-width: 768px)" srcset="images/slider/slider-3-tablet.png 1x, images/slider/slider-3-tablet-2x.png 2x" width="476" height="476"> -->
 
           <img class="hero-slider__image" src="images/slider/slider-1-mobile.png" width="280" height="280" srcset="images/slider/slider-1-mobile-2x.png 2x" alt="Кофе номер 1.">
           <img class="hero-slider__image" src="images/slider/slider-2-mobile.png" width="280" height="280" srcset="images/slider/slider-2-mobile-2x.png 2x" alt="Кофе номер 2.">
@@ -84,7 +83,7 @@
           <div class="hero-slider__wrapper">
           <span class="hero-slider__bage bage">Новинка!</span>
         <h2 class="hero-slider__title">Декаф Флэт Уайт</h2>
-        <p class="hero-slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+        <p class="hero-slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для&nbspрасслабления после тяжёлого рабочего дня</p>
 
         <div class="hero-slider__container">
           <s class="hero-slider__old-price">295₽</s>
