--- a/source/index.html
+++ b/source/index.html
@@ -83,7 +83,7 @@
           <div class="hero-slider__wrapper">
           <span class="hero-slider__bage bage">Новинка!</span>
         <h2 class="hero-slider__title">Декаф Флэт Уайт</h2>
-        <p class="hero-slider__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для&nbspрасслабления после тяжёлого рабочего дня</p>
+        <p class="hero-slider__description">Свежесваренный кофе без кофеина из Эфиопии с&nbspнатуральным фермерским молоком — то, что нужно для&nbspрасслабления после тяжёлого рабочего дня</p>
 
         <div class="hero-slider__container">
           <s class="hero-slider__old-price">295₽</s>
@@ -109,19 +109,19 @@
           <li class="features__item">
             <span class="features__image features__image--comfort"></span>
             <h4 class="features__description-title">Удобство</h4>
-            <p class="features__description">Легко помещается и в карман,
-              и в маленькую сумочку</p>
+            <p class="features__description">Легко помещается и&nbspв&nbspкарман,
+              и&nbspв&nbspмаленькую сумочку</p>
           </li>
           <li class="features__item">
             <span class="features__image features__image--energy"></span>
             <h4 class="features__description-title">Бодрость</h4>
-            <p class="features__description">Сбалансированная доза кофеина даст мощный заряд энергии</p>
+            <p class="features__description">Сбалансированная доза кофеина даст&nbspмощный заряд энергии</p>
           </li>
           <li class="features__item">
             <span class="features__image features__image--eco"></span>
             <h4 class="features__description-title">Экологичность</h4>
             <p class="features__description">Вся упаковка сделана
-              из перерабатываемых материалов</p>
+              из&nbspперерабатываемых материалов</p>
           </li>
         </ul>
       </div>
@@ -130,6 +130,7 @@
         <div class="catalog__wrapper wrapper">
         <span class="catalog__bage bage">Каталог</span>
         <h3 class="catalog__title">Каталог кофейных напитков</h3>
+        <div class="catalog__container">
         <form class="catalog__form form" action="https://echo.htmlacademy.ru/" method="get">
           <div class="form__wrapper">
           <fieldset class="form__group">
@@ -232,6 +233,7 @@
             <button class="form__button button form__button--reset" type="reset">Сбросить</button>
           </div>
         </form>
+        <div class="catalog__list-wrapper">
         <div class="catalog__select-wrapper select">
         <span class="select__name">Сортировка:</span>
         <div class="select__wrapper">
@@ -244,7 +246,6 @@
         <span class="select__icon"></span>
       </div>
       </div>
-        <div class="catalog__list-wrapper">
           <ul class="catalog__list">
             <li class="catalog__item card">
               <a class="card__picture" href="">
@@ -255,7 +256,7 @@
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
-                с натуральным фермерским молоком</p>
+                с&nbspнатуральным фермерским молоком</p>
                 <div class="card__wrapper">
               <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
@@ -270,7 +271,7 @@
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
-                с натуральным фермерским молоком</p>
+                с&nbspнатуральным фермерским молоком</p>
                 <div class="card__wrapper">
               <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
@@ -285,7 +286,7 @@
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
-                с натуральным фермерским молоком</p>
+                с&nbspнатуральным фермерским молоком</p>
                 <div class="card__wrapper">
               <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
@@ -300,7 +301,7 @@
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
-                с натуральным фермерским молоком</p>
+                с&nbspнатуральным фермерским молоком</p>
                 <div class="card__wrapper">
               <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
@@ -316,7 +317,7 @@
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
-                с натуральным фермерским молоком</p>
+                с&nbspнатуральным фермерским молоком</p>
                 <div class="card__wrapper">
               <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
@@ -331,7 +332,7 @@
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
-                с натуральным фермерским молоком</p>
+                с&nbspнатуральным фермерским молоком</p>
                 <div class="card__wrapper">
               <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
@@ -339,9 +340,10 @@
             </li>
           </ul>
         </div>
+      </div>
         <div class="catalog__pagination pagination">
           <button class="pagination__button pagination__button--prev">
-            <span class="visually-hidden">Назад</span>
+            <span class="pagination__button-span">Назад</span>
           </button>
           <ul class="pagination__list">
             <li class="pagination__item">
@@ -355,11 +357,12 @@
             </li>
           </ul>
           <button class="pagination__button pagination__button--next">
-            <span class="visually-hidden">Вперёд</span>
+            <span class="pagination__button-span">Вперёд</span>
           </button>
         </div>
         </div>
       </section>
+
       <section class="map">
         <div class="map__wrapper">
           <picture>
@@ -373,6 +376,7 @@
       </div>
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer__wrapper">
       <div class="footer__social social">
